# yesod-postgres.g8

./: .gitignore  README.md
src/main/g8/: $name__camel$.cabal  $name__norm$.cabal  .gitignore  README.md  default.properties  devel.hs  generate-documentation.sh
src/main/g8/config/: keter.yaml  postgresql.yml
src/main/g8/deploy/: Procfile
src/main/g8/docs/DevelopmentGuide/: Foundation.md  README.md
src/main/g8/doctests/: Main.hs
src/main/g8/liquid/: Main.hs
src/main/g8/src/: Application.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs
src/main/g8/src/Handler/: Home.hs
src/main/g8/src/Settings/: StaticFiles.hs
src/main/g8/templates/: default-layout-wrapper.hamlet  default-layout.hamlet  homepage.hamlet
src/main/g8/tests/: HomeTest.hs  Main.hs  TestImport.hs
