name:               $name;format="norm"$
version:            0.0.1
license:            $license_type$
license-file:       etc/LICENCE.md
author:             $author_name$
maintainer:         $maintainer$
copyright:          Copyright (C) 2014
synopsis:           $synopsis$
category:           $category$
description:        $cabal_description$
homepage:           $homepage$
bug-reports:        $homepage$
cabal-version:      >= $cabal_version$
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           $gitrepo_location$

flag                    small_base
    description:        Choose the new, split-up base package.

flag                    dev
    description:        Turn on development settings, like auto-reload templates.
    default:            False

flag                    library-only
    description:        Build for use with "yesod devel"
    default:            False

library
    default-language:   Haskell2010


    build-depends:      base                          >= 4          && < 5
                    ,   base64-bytestring             >= 1.0        && < 1.1
                    ,   data-default                  == 0.5.*
                    ,   mersenne-random-pure64        >= 0.2        && < 0.3
                    ,   yesod                         >= 1.2        && < 1.3
                    ,   yesod-core                    >= 1.2        && < 1.3
                    ,   yesod-auth                    >= 1.2        && < 1.3
                    ,   yesod-static                  >= 1.2        && < 1.3
                    ,   yesod-form                    >= 1.3        && < 1.4
                    ,   bytestring                    >= 0.9        && < 0.11
                    ,   text                          >= 0.11       && < 2.0
                    ,   persistent                    >= 1.3        && < 1.4
                    ,   persistent-postgresql         >= 1.3        && < 1.4
                    ,   persistent-template           >= 1.3        && < 1.4
                    ,   template-haskell
                    ,   hamlet                        >= 1.1        && < 1.2
                    ,   shakespeare-css               >= 1.0        && < 1.1
                    ,   shakespeare-js                >= 1.2        && < 1.3
                    ,   shakespeare-text              >= 1.0        && < 1.1
                    ,   hjsmin                        >= 0.1        && < 0.2
                    ,   monad-control                 >= 0.3        && < 0.4
                    ,   wai-extra                     == 3.0.*
                    ,   yaml                          >= 0.8        && < 0.9
                    ,   http-conduit                  == 2.1.*
                    ,   directory                     >= 1.1        && < 1.3
                    ,   warp                          == 3.0.*
                    ,   aeson                         >= 0.6        && < 0.8
                    ,   conduit                       >= 1.0        && < 2.0
                    ,   monad-logger                  >= 0.3        && < 0.4
                    ,   fast-logger                   >= 2.1        && < 2.2
                    ,   wai-logger                    >= 2.1        && < 2.2



    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    Application
                        Foundation
                        Import
                        Model
                        Settings
                        Settings.StaticFiles
                        Settings.Development
                        Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    default-extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable


executable              $executable_name$
    if flag(library-only)
        Buildable: False

    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -threaded
                        -O2
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,\$ORIGIN
    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:          base < 5 && >= 4
                        ,   $name;format="norm"$
                        ,   yesod                         >= 1.2        && < 1.3

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base                >= 3 && < 5
                    ,   doctest             >= 0.9.11
                    ,   filepath            >= 1.3
                    ,   directory           >= 1.1
                    ,   QuickCheck          >= 2.0
                    ,   template-haskell    == 2.9.*

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests


test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests
    ghc-options:        -Wall
    default-language:   Haskell2010

    build-depends:      base
                    ,   $name;format="norm"$
                    ,   yesod-test >= 1.2 && < 1.3
                    ,   yesod-core
                    ,   yesod
                    ,   persistent
                    ,   persistent-postgresql
                    ,   resourcet
                    ,   monad-logger
                    ,   transformers
                    ,   hspec

test-suite              hlint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hlint
    build-depends:      base
                    ,   hlint               == 1.8.*

benchmark               benchmarks
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     benchmarks
    main-is:            Main.hs
    ghc-options:        -O2 -rtsopts

    build-depends:      base > 4 && <= 5
                    ,   $name;format="norm"$
                    ,   criterion >= 0.8
